# vending-machine

./: Automat.cpp  Automat.h  BLIK.cpp  BLIK.h  Baton.cpp  Baton.h  CMakeLists.txt  Chipsy.h  Gotowka.cpp  Gotowka.h  Helper.h  Karta.cpp  Karta.h  Napoj.cpp  Napoj.h  Platnosc.cpp  Platnosc.h  Polka_na_produkty.h  Produkt.cpp  Produkt.h  Pseudo_baza_banku.cpp  Pseudo_baza_banku.h  Walidacja.cpp  Walidacja.h  main.cpp  stdin.txt  temat2.txt
