cmake_minimum_required(VERSION 3.17)
project(SroczynskiWiktor-etap3)

set(CMAKE_CXX_STANDARD 14)

add_executable(SroczynskiWiktor-etap3 main.cpp Napoj.cpp Napoj.h Automat.cpp Automat.h Walidacja.cpp Walidacja.h Platnosc.cpp Platnosc.h Karta.cpp Karta.h BLIK.cpp BLIK.h Gotowka.cpp Gotowka.h Pseudo_baza_banku.cpp Pseudo_baza_banku.h Polka_na_produkty.h Chipsy.h Produkt.cpp Produkt.h Baton.cpp Baton.h Helper.h)